--- a/artist/templates/pages/show_venue.html
+++ b/artist/templates/pages/show_venue.html
@@ -74,7 +74,7 @@
 		{% endfor %}
 	</div>
 	<div class="row">
-		<a href="/venues/{{venue.id}}/edit"><button class="btn btn-default btn-lg">Edit this Venue</button></a><a href="/deletevenue/{{venue.id}}"><button class="btn btn-default btn-lg" id="deleteArtist" data-id="{{ venue.id }}">Delete this Artist</button></a>
+		<a href="/venues/{{venue.id}}/edit"><button class="btn btn-default btn-lg">Edit this Venue</button></a><a href="/deletevenue/{{venue.id}}"><button class="btn btn-default btn-lg" onclick="confirm('Are you sure you want to delete this venue?')" data-id="{{ venue.id }}">Delete this Artist</button></a>
 	</div>
 </section>
 
@@ -82,11 +82,12 @@
 	const btn = document.getElementById('deleteArtist');
 	btn.onclick = function(e) {
 		venue_id = e.target.dataset['id'];
-		location = '/deletevenue/' + venue_id
 		console.log(venue_id)
 		let r = confirm("Are you sure you want to delete this venue?");
 		if (r == true) {
-			window.location.href = location
+			fetch('/deletevenue/' + venue_id, {
+				method: 'DELETE'
+			})
 		}
 	}
 
