--- a/artist/templates/pages/show_venue.html
+++ b/artist/templates/pages/show_venue.html
@@ -74,7 +74,7 @@
 		{% endfor %}
 	</div>
 	<div class="row">
-		<a href="/venues/{{venue.id}}/edit"><button class="btn btn-default btn-lg">Edit this Venue</button></a><a href="/deletevenue/{{venue.id}}"><button class="btn btn-default btn-lg" onclick="confirm('Are you sure you want to delete this venue?')" data-id="{{ venue.id }}">Delete this Artist</button></a>
+		<a href="/venues/{{venue.id}}/edit"><button class="btn btn-default btn-lg">Edit this Venue</button></a> <button class="btn btn-default btn-lg" id="deleteArtist" data-id="{{ venue.id }}">Delete this Venue</button>
 	</div>
 </section>
 
@@ -87,6 +87,12 @@
 		if (r == true) {
 			fetch('/deletevenue/' + venue_id, {
 				method: 'DELETE'
+			})
+			.then(response => response.json())
+			.then(jsonResponse => {
+				if (jsonResponse) {
+					window.location.href = "/venues"
+				}
 			})
 		}
 	}
