--- a/artist/templates/layouts/main.html
+++ b/artist/templates/layouts/main.html
@@ -61,8 +61,7 @@
                   type="search"
                   name="search_term"
                   placeholder="Find a venue"
-                  aria-label="Search">
-                  <input type="submit" value="Search" class="btn-search">
+                  aria-label="Search"> <input type="submit" value="Search" class="btn-search">
               </form>
               {% endif %}
               {% if (request.endpoint == 'artists') or
@@ -73,8 +72,7 @@
                   type="search"
                   name="search_term"
                   placeholder="Find an artist"
-                  aria-label="Search">
-                  <input type="submit" value="Search" class="btn-search">
+                  aria-label="Search"> <input type="submit" value="Search" class="btn-search">
               </form>
               {% endif %}
             </li>
