--- a/artist/templates/pages/search_venues.html
+++ b/artist/templates/pages/search_venues.html
@@ -9,7 +9,7 @@
 			<i class="fas fa-music"></i>
 			<div class="item">
 				<h5>{{ venue.name }}</h5>
-				<h6>{{ artist.data.num_upcoming_shows }} Upcoming Shows</h6>
+				<h6>{{ artist.num_upcoming_shows }} Upcoming Shows</h6>
 			</div>
 		</a>
 	</li>
